--- a/src/scss/General/_animation.scss
+++ b/src/scss/General/_animation.scss
@@ -49,3 +49,13 @@
     transform: scale(1.2);
   }
 }
+
+@keyframes round {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
