--- a/src/scss/blocks/_blocks.scss
+++ b/src/scss/blocks/_blocks.scss
@@ -2,3 +2,6 @@
 @import './slide-status.scss';
 @import './view.scss';
 @import './_welcome.scss';
+@import './_who.scss';
+@import './variety.scss';
+@import './system.scss';
