--- a/src/scss/General/_animation.scss
+++ b/src/scss/General/_animation.scss
@@ -59,3 +59,13 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes round-item {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(-360deg);
+  }
+}
